--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
+    <%= link_to "home", class: "navbar-brand"  do %>
+      <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1702746045/Property_1_Frame_566_qq1z9u.png" %>
     <% end %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,20 +11,50 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link" %>
+          <li class="nav-item ">
+
+            <%= link_to "Comunidad","#", class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
+            <%= link_to "Encuentra un profesor","#",class: "nav-link" %>
+          </li>
+           <li class="nav-item">
+            <%= link_to "Chat", "#",class: "nav-link" %>
+          </li>
+           <li class="nav-item">
+            <%= link_to "Mis clases","#",class: "nav-link" %>
+          </li>
+            <li class="nav-item">
+            <%= link_to "Blogs","#",class: "nav-link" %>
           </li>
           <li class="nav-item dropdown">
           <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
+
+           <% if current_user.photo.attached? %>
+              <%= cl_image_tag current_user.photo.key, class: "avatar" %>
+            <% else %>
+              <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1702747734/WhatsApp_Image_2023-12-16_at_14.08.37_baunyp.jpg", class: "avatar", alt: "dropdown menu" %>
+            <% end %>
           </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+          <%#  %>
+            <div class="dropdown-menu dropdown-menu-end flex-menu text-center" aria-labelledby="navbarDropdown">
+              <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1702746045/Property_1_Frame_566_qq1z9u.png"%>
+
+              <%= link_to "My Profile", edit_user_registration_path, class: "dropdown-item"%>
+              <%= link_to "Idiomas", edit_user_registration_path, class: "dropdown-item"%>
+              <%= link_to "Certificados", edit_user_registration_path, class: "dropdown-item"%>
+              <%= link_to "Temas", edit_user_registration_path, class: "dropdown-item"%>
+              <%= link_to "Siguiendo", edit_user_registration_path, class: "dropdown-item"%>
+              <%= link_to "Clases", edit_user_registration_path, class: "dropdown-item"%>
+              <%= link_to "Chats", edit_user_registration_path, class: "dropdown-item"%>
+              <%= link_to "Blogs", edit_user_registration_path, class: "dropdown-item"%>
+              <%= link_to "Ajustes", edit_user_registration_path, class: "dropdown-item"%>
+              <%= link_to "Visitantes", edit_user_registration_path, class: "dropdown-item"%>
+              <br>
+              <br>
+              <button type="button" class="btn btn-custom">Cerrar</button>
+
+              <%# <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
           </li>
         <% else %>
