--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -37,7 +37,7 @@
             <% end %>
           </a>
           <%#  %>
-            <div class="dropdown-menu dropdown-menu-end flex-menu text-center" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu dropdown-menu-end text-center" aria-labelledby="navbarDropdown">
               <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1702746045/Property_1_Frame_566_qq1z9u.png"%>
 
               <%= link_to "My Profile", edit_user_registration_path, class: "dropdown-item"%>
@@ -66,3 +66,4 @@
     </div>
   </div>
 </div>
+<%# el ideal es hacer todo con bostrap %>
