tags HTML semántico en application.html.erb, configuración de color de background _colors.scss y _bootstrap_variables.scss, adecuación color de bg y fuente a menú desplegable del navbar por modificación anterior

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -21,3 +21,11 @@
   border-radius: 50px;
   background: var(--fondo-verde, #39B54A);
 }
+
+.dropdown-menu {
+  background-color: white;
+}
+
+.dropdown-item {
+  color: #225191;
+}
