--- a/app/views/users/students.html.erb
+++ b/app/views/users/students.html.erb
@@ -1,2 +1,9 @@
-<h1>Users#students</h1>
-<p>Find me in app/views/users/students.html.erb</p>
+<section class="container">
+  <header>
+    <h1>Users#students</h1>
+  </header>
+
+  <div>
+    <p>Find me in app/views/users/students.html.erb</p>
+  </div>
+</section>
