--- a/app/views/users/teachers.html.erb
+++ b/app/views/users/teachers.html.erb
@@ -1,2 +1,5 @@
-<h1>Users#teachers</h1>
-<p>Find me in app/views/users/teachers.html.erb</p>
+<div class="container">
+  <h1>Users#teachers</h1>
+  <p>Find me in app/views/users/teachers.html.erb</p>
+
+</div>
