--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,18 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body><%= render "shared/navbar" %>
-  <%= render "shared/flashes" %>
+  <body>
+    <nav>
+      <%= render "shared/navbar" %>
+    </nav>
 
-    <%= yield %>
-    <%= render "shared/footer" %>
+    <main>
+      <%= render "shared/flashes" %>
+      <%= yield %>
+    </main>
 
+    <footer>
+      <%#= render "shared/footer" %>
+    </footer>
   </body>
 </html>
