--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,6 @@
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li class="nav-item ">
-
             <%= link_to "Comunidad","#", class: "nav-link" %>
           </li>
           <li class="nav-item">
@@ -27,16 +26,16 @@
             <li class="nav-item">
             <%= link_to "Blogs","#",class: "nav-link" %>
           </li>
+          <%# MENÚ DESPLEGABLE %>
           <li class="nav-item dropdown">
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <% if current_user.photo.attached? %>
+                <%= cl_image_tag current_user.photo.key, class: "avatar" %>
+              <% else %>
+                <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1702747734/WhatsApp_Image_2023-12-16_at_14.08.37_baunyp.jpg", class: "avatar", alt: "dropdown menu" %>
+              <% end %>
+            </a>
 
-           <% if current_user.photo.attached? %>
-              <%= cl_image_tag current_user.photo.key, class: "avatar" %>
-            <% else %>
-              <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1702747734/WhatsApp_Image_2023-12-16_at_14.08.37_baunyp.jpg", class: "avatar", alt: "dropdown menu" %>
-            <% end %>
-          </a>
-          <%#  %>
             <div class="dropdown-menu dropdown-menu-end text-center" aria-labelledby="navbarDropdown">
               <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1702746045/Property_1_Frame_566_qq1z9u.png"%>
 
@@ -57,6 +56,7 @@
               <%# <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
           </li>
+
         <% else %>
           <li class="nav-item">
             <%= link_to "Login", new_user_session_path, class: "nav-link" %>
