footer y nbavar terminado

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,28 +1,44 @@
-<div class="footer">
- <div class="row">
-  <div class="col-4">
-    <h2>Sobre nosotros</h2>
-    <p>Quienes somos</p>
-    <p>¿Cómo funciona?</p>
-    <p>Reseñas sobre Lingua</p>
+<div class ="footer">
+ <div class="container">
+    <div class="footer-row">
+      <div class="footer-links">
+        <h2> Sobre nosotros</h2>
+        <p> <%= link_to "Quienes somos","#", class: "nav-link" %>
+        </li></p>
+        <p> <%= link_to "¿Cómo funciona?","#", class: "nav-link" %>
+        </li></p>
+        <p> <%= link_to "Reseñas sobre Lingua","#", class: "nav-link" %>
+        </li></p>
+        <p> <%= link_to "Trabaja en Lingua","#", class: "nav-link" %>
+        </li></p>
+      </div>
+      <div class="footer-links">
+        <h2>Para estudiante</h2>
+        <p> <%= link_to "Blog de Lingua","#", class: "nav-link" %>
+        </li></p>
+        <p> <%= link_to "Preguntas y respuestas","#", class: "nav-link" %>
+        </li></p>
+        <p> <%= link_to "Descuento para estudiantes","#", class: "nav-link" %>
+        </li></p>
+        <p> <%= link_to "Evalúa tu ingles","#", class: "nav-link" %>
+        </li></p>
+      </div>
+      <div class="footer-links">
+        <h2>Para Profesores</h2>
+        <p> <%= link_to "Conviértete en un profesor en linea","#", class: "nav-link" %>
+        </li></p>
+        <p> <%= link_to "Enseñar ingles online","#", class: "nav-link" %>
+        </li></p>
+        <p> <%= link_to "Enseñar francés online","#", class: "nav-link" %>
+        </li></p>
+        <p> <%= link_to "Enseñar español online","#", class: "nav-link" %>
+        </li></p>
+        <p> <%= link_to "Enseñar otros idiomas","#", class: "nav-link" %>
+        </li></p>
+      </div>
+    </div>
   </div>
-  <div class="col-4">
-    <h2>Para estudiantes</h2>
-    <p>Blog de Lingua</p>
-    <p>Preguntas y respuestas</p>
-    <p>Descuento para estudiantes</p>
-    <p>Evalúa tu inglés gratis</p>
+  <div class="card-body">
+    <h5 class="card-title">Copyrights 2022 EDUCACIÓN GLOBAL</h5>
   </div>
-  <div class="col-4">
-    <h2>Para profesores</h2>
-    <p>Conviértete en un profesor en línea</p>
-    <p>Enseñar inglés online</p>
-    <p>Enseñar francés online</p>
-    <p>Enseñar español online</p>
-    <p>Enseñar otros idiomas</p>
-  </div>
- </div>
 </div>
-<div>
- Copyrights 2022 EDUCACIÓN GLOBAL
- </div>
