--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,3 +5,7 @@
 @import "navbar";
 @import "banner";
 @import "footer";
+@import "card_teacher_home";
+@import "card_community_home";
+@import "banner_mid";
+@import "card_teacher_home_2";
