--- a/app/views/pages/_card_teacher_home.html.erb
+++ b/app/views/pages/_card_teacher_home.html.erb
@@ -1,2 +1,218 @@
+<div class="container" style="max-width: 1440px;">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="teacher-cards-container">
+        <div class="titulo">
+          <h2>Portugues</h2>
+          <%= link_to "Ver más", new_user_session_path, class: "link-ver-mas" %>
+        </div>
+
+        <div class="card-teacher-home">
+          <h2 class="ranking">#1</h2>
+          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
+          <div class="card-teacher-infos">
+            <h2>Nombre</h2>
+            <p>Ingles</p>
+            <p>TEFL/TESOL</p>
+            <p>Verificado</p>
+          </div>
+        </div>
+
+        <div class="card-teacher-home">
+          <h2 class="ranking">#2</h2>
+          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
+          <div class="card-teacher-infos">
+            <h2>Nombre</h2>
+            <p>Ingles</p>
+            <p>TEFL/TESOL</p>
+            <p>Verificado</p>
+          </div>
+        </div>
+
+        <div class="card-teacher-home">
+          <h2 class="ranking">#3</h2>
+          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
+          <div class="card-teacher-infos">
+            <h2>Nombre</h2>
+            <p>Ingles</p>
+            <p>TEFL/TESOL</p>
+            <p>Verificado</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+     <div class="col-md-3">
+      <div class="teacher-cards-container">
+        <div class="titulo">
+          <h2>Portugues</h2>
+          <%= link_to "Ver más", new_user_session_path, class: "link-ver-mas" %>
+        </div>
+
+        <div class="card-teacher-home">
+          <h2 class="ranking">#1</h2>
+          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
+          <div class="card-teacher-infos">
+            <h2>Nombre</h2>
+            <p>Ingles</p>
+            <p>TEFL/TESOL</p>
+            <p>Verificado</p>
+          </div>
+        </div>
+
+        <div class="card-teacher-home">
+          <h2 class="ranking">#2</h2>
+          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
+          <div class="card-teacher-infos">
+            <h2>Nombre</h2>
+            <p>Ingles</p>
+            <p>TEFL/TESOL</p>
+            <p>Verificado</p>
+          </div>
+        </div>
+
+        <div class="card-teacher-home">
+          <h2 class="ranking">#3</h2>
+          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
+          <div class="card-teacher-infos">
+            <h2>Nombre</h2>
+            <p>Ingles</p>
+            <p>TEFL/TESOL</p>
+            <p>Verificado</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+     <div class="col-md-3">
+      <div class="teacher-cards-container">
+        <div class="titulo">
+          <h2>Portugues</h2>
+          <%= link_to "Ver más", new_user_session_path, class: "link-ver-mas" %>
+        </div>
+
+        <div class="card-teacher-home">
+          <h2 class="ranking">#1</h2>
+          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
+          <div class="card-teacher-infos">
+            <h2>Nombre</h2>
+            <p>Ingles</p>
+            <p>TEFL/TESOL</p>
+            <p>Verificado</p>
+          </div>
+        </div>
+
+        <div class="card-teacher-home">
+          <h2 class="ranking">#2</h2>
+          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
+          <div class="card-teacher-infos">
+            <h2>Nombre</h2>
+            <p>Ingles</p>
+            <p>TEFL/TESOL</p>
+            <p>Verificado</p>
+          </div>
+        </div>
+
+        <div class="card-teacher-home">
+          <h2 class="ranking">#3</h2>
+          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
+          <div class="card-teacher-infos">
+            <h2>Nombre</h2>
+            <p>Ingles</p>
+            <p>TEFL/TESOL</p>
+            <p>Verificado</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+     <div class="col-md-3">
+      <div class="teacher-cards-container">
+        <div class="titulo">
+          <h2>Portugues</h2>
+          <%= link_to "Ver más", new_user_session_path, class: "link-ver-mas" %>
+        </div>
+
+        <div class="card-teacher-home">
+          <h2 class="ranking">#1</h2>
+          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
+          <div class="card-teacher-infos">
+            <h2>Nombre</h2>
+            <p>Ingles</p>
+            <p>TEFL/TESOL</p>
+            <p>Verificado</p>
+          </div>
+        </div>
+
+        <div class="card-teacher-home">
+          <h2 class="ranking">#2</h2>
+          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
+          <div class="card-teacher-infos">
+            <h2>Nombre</h2>
+            <p>Ingles</p>
+            <p>TEFL/TESOL</p>
+            <p>Verificado</p>
+          </div>
+        </div>
+
+        <div class="card-teacher-home">
+          <h2 class="ranking">#3</h2>
+          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
+          <div class="card-teacher-infos">
+            <h2>Nombre</h2>
+            <p>Ingles</p>
+            <p>TEFL/TESOL</p>
+            <p>Verificado</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<%# <div class="custom-card">
+  <p class="card-text">#1</p>
+  <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Nombre</h5>
+    <p class="card-text">Ingles</p>
+    <p class="card-text">TEFL/TESOL</p>
+    <p class="card-text"></p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div> %>
