--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,27 @@
-<%= render "banner" %>
-<%= render "card_teacher_home" %>
+<div class="page-content">
+  <%= render "banner" %>
+  <div class="body">
+
+    <%= render "card_title" %>
+    <%= render "card_teacher_home" %>
+    <%= render "card_titles_primary" %>
+    <%= render "card_community_home" %>
+    <%= render "banner_mid" %>
+    <%= render "card_title_teacher" %>
+    <%= render "card_teacher_home_2" %>
+
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
