--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,13 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body><%= render "shared/navbar" %>
-  <%= render "shared/flashes" %>
+  <body>
+    <%= render "shared/navbar" %>
+
+    <%= render "shared/flashes" %>
 
     <%= yield %>
+
     <%= render "shared/footer" %>
 
   </body>
