--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,18 @@
 <section class="container">
   <header>
-    <h1>Perfil del usario cliqueado</h1>
+    <h1>Perfil del usuario cliqueado</h1>
   </header>
-  <%= raise %>
 
   <div>
     <p>Find me in app/views/users/show.html.erb</p>
   </div>
 </section>
+
+
+
+<%= @user.first_name %>
+<%= @user.last_name %>
+
+
+
+  
