--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,7 +7,8 @@
     width: 1440px;
     margin: 0 auto;
     z-index: 1;
-    transform: translate(-0%, -16%);
+    transform: translate(-0%, -14.5%);
+    margin-bottom: -28%;
   }
 
   .container-cards-teacher-home {
@@ -25,6 +26,7 @@
     border-radius: 16px;
     background: rgba(0, 0, 0, 0.20);
     margin: 40px 0px;
+    
 
     h2, p {
       color: #FFF;
