--- a/app/views/pages/_card_teacher_home.html.erb
+++ b/app/views/pages/_card_teacher_home.html.erb
@@ -1,218 +1,40 @@
 <div class="container" style="max-width: 1440px;">
   <div class="row">
-    <div class="col-md-3">
-      <div class="teacher-cards-container">
-        <div class="titulo">
-          <h2>Portugues</h2>
-          <%= link_to "Ver más", new_user_session_path, class: "link-ver-mas" %>
-        </div>
-
-        <div class="card-teacher-home">
-          <h2 class="ranking">#1</h2>
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
-          <div class="card-teacher-infos">
-            <h2>Nombre</h2>
-            <p>Ingles</p>
-            <p>TEFL/TESOL</p>
-            <p>Verificado</p>
+    <% ["francés", "español", "inglés", "alemán"].each do |language| %>
+      <div class="col-md-3">
+        <div class="teacher-cards-container">
+          <div class="titulo">
+            <h2><%= language.capitalize %></h2>
+            <%= link_to "Ver más", teachers_path(native_language: language), class: "link-ver-mas" %>
           </div>
-        </div>
-
-        <div class="card-teacher-home">
-          <h2 class="ranking">#2</h2>
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
-          <div class="card-teacher-infos">
-            <h2>Nombre</h2>
-            <p>Ingles</p>
-            <p>TEFL/TESOL</p>
-            <p>Verificado</p>
-          </div>
-        </div>
-
-        <div class="card-teacher-home">
-          <h2 class="ranking">#3</h2>
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
-          <div class="card-teacher-infos">
-            <h2>Nombre</h2>
-            <p>Ingles</p>
-            <p>TEFL/TESOL</p>
-            <p>Verificado</p>
-          </div>
+          <% ranking_counter = 1 %>
+          <% @teachers.where(native_language: language).take(3).each do |teacher| %>
+            <%= link_to user_path(teacher), style: "text-decoration: none; color: inherit;" do %>
+              <div class="card-teacher-home">
+                <h2 class="ranking">#<%= ranking_counter %></h2>
+                <%= image_tag teacher.photo, class: "card-img-top", alt: "foto de perfil del profesor" %>
+                <div class="card-teacher-infos">
+                  <h2><%= teacher.first_name %></h2>
+                  <p>
+                    <i class="fas fa-graduation-cap"></i> <%= teacher.data_teacher.teaching_languages %>
+                  </p>
+                  <p>
+                    <% description = teacher.data_teacher.teacher_description %>
+                    <% truncated_description = truncate(description, length: 50) %> <!-- Cambia el número según tu preferencia -->
+                    <%= truncated_description %>                 
+                  </p>
+                  <p style=" color: green;">Verificado</p>
+                </div>
+              </div>
+            <% end %>
+            <% ranking_counter += 1 %>
+          <% end %>
         </div>
       </div>
-
-    </div>
-
-     <div class="col-md-3">
-      <div class="teacher-cards-container">
-        <div class="titulo">
-          <h2>Portugues</h2>
-          <%= link_to "Ver más", new_user_session_path, class: "link-ver-mas" %>
-        </div>
-
-        <div class="card-teacher-home">
-          <h2 class="ranking">#1</h2>
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
-          <div class="card-teacher-infos">
-            <h2>Nombre</h2>
-            <p>Ingles</p>
-            <p>TEFL/TESOL</p>
-            <p>Verificado</p>
-          </div>
-        </div>
-
-        <div class="card-teacher-home">
-          <h2 class="ranking">#2</h2>
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
-          <div class="card-teacher-infos">
-            <h2>Nombre</h2>
-            <p>Ingles</p>
-            <p>TEFL/TESOL</p>
-            <p>Verificado</p>
-          </div>
-        </div>
-
-        <div class="card-teacher-home">
-          <h2 class="ranking">#3</h2>
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
-          <div class="card-teacher-infos">
-            <h2>Nombre</h2>
-            <p>Ingles</p>
-            <p>TEFL/TESOL</p>
-            <p>Verificado</p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-     <div class="col-md-3">
-      <div class="teacher-cards-container">
-        <div class="titulo">
-          <h2>Portugues</h2>
-          <%= link_to "Ver más", new_user_session_path, class: "link-ver-mas" %>
-        </div>
-
-        <div class="card-teacher-home">
-          <h2 class="ranking">#1</h2>
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
-          <div class="card-teacher-infos">
-            <h2>Nombre</h2>
-            <p>Ingles</p>
-            <p>TEFL/TESOL</p>
-            <p>Verificado</p>
-          </div>
-        </div>
-
-        <div class="card-teacher-home">
-          <h2 class="ranking">#2</h2>
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
-          <div class="card-teacher-infos">
-            <h2>Nombre</h2>
-            <p>Ingles</p>
-            <p>TEFL/TESOL</p>
-            <p>Verificado</p>
-          </div>
-        </div>
-
-        <div class="card-teacher-home">
-          <h2 class="ranking">#3</h2>
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
-          <div class="card-teacher-infos">
-            <h2>Nombre</h2>
-            <p>Ingles</p>
-            <p>TEFL/TESOL</p>
-            <p>Verificado</p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-     <div class="col-md-3">
-      <div class="teacher-cards-container">
-        <div class="titulo">
-          <h2>Portugues</h2>
-          <%= link_to "Ver más", new_user_session_path, class: "link-ver-mas" %>
-        </div>
-
-        <div class="card-teacher-home">
-          <h2 class="ranking">#1</h2>
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
-          <div class="card-teacher-infos">
-            <h2>Nombre</h2>
-            <p>Ingles</p>
-            <p>TEFL/TESOL</p>
-            <p>Verificado</p>
-          </div>
-        </div>
-
-        <div class="card-teacher-home">
-          <h2 class="ranking">#2</h2>
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
-          <div class="card-teacher-infos">
-            <h2>Nombre</h2>
-            <p>Ingles</p>
-            <p>TEFL/TESOL</p>
-            <p>Verificado</p>
-          </div>
-        </div>
-
-        <div class="card-teacher-home">
-          <h2 class="ranking">#3</h2>
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6"  />
-          <div class="card-teacher-infos">
-            <h2>Nombre</h2>
-            <p>Ingles</p>
-            <p>TEFL/TESOL</p>
-            <p>Verificado</p>
-          </div>
-        </div>
-      </div>
-
-    </div>
+    <% end %>
   </div>
 </div>
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<%# <div class="custom-card">
-  <p class="card-text">#1</p>
-  <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg?ver=6" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Nombre</h5>
-    <p class="card-text">Ingles</p>
-    <p class="card-text">TEFL/TESOL</p>
-    <p class="card-text"></p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div> %>
