--- a/app/views/pages/_card_teacher_home_2.html.erb
+++ b/app/views/pages/_card_teacher_home_2.html.erb
@@ -1,232 +1,35 @@
 <div class="container" style="max-width: 1440px;">
   <div class="row">
-
-    <div class="col-md-3">
-      <div class="card-community-home-2">
-        <div class="title">
-          <h2 class="name">Carolina</h2>
-          <p class="learns">Frances</p>       
-        </div>
-        <div class="img">
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg" alt="Carolina Image" />
-        </div>
-        <div class="infos">
-          <p>Verificado</p>
-          <p>Tener experiencia viviendo en el extranjero.</p>
-          <p>Certificado TEFL/TESOL</p>
-          <p>Experto en inglés conversacional, preparación TOEFL, preparación de inglés FCEL</p>
-          <p>$ 5.178 Clases de 60 minutos</p>
-          <p>Profesora de ESL certificada por TESOL con 2 años y medio de experiencia en la enseñanza. ¿Quieres convertirte en un comunicador en inglés seguro y eficaz? Entonces estás en el lugar correcto...</p>
-          <p>38 Reseñas</p>
-          <p>1800 clases impartidas</p>
-          <p>19 Estudiantes activos</p>
-          <div class="language">
-            <p>Nativo</p>
-            <p>Experto</p>
-            <p>Intermedio</p>
+  
+    <% @teachers.take(12).each do |teacher| %>
+      <div class="col-md-3">
+        <%= link_to user_path(teacher), style: "text-decoration: none; color: inherit;" do %>
+          <div class="card-community-home-2">
+            <div class="title">
+              <h2 class="name"><%= teacher.first_name %></h2>
+              <p class="learns">
+                <i class="fas fa-graduation-cap"></i> <%= teacher.data_teacher.teaching_languages %>
+              </p>
+            </div>
+            <div class="img">
+              <%= image_tag teacher.photo, class: "card-img-top", alt: "foto de perfil del profesor" %>
+            </div>
+            <div class="infos">
+              <p style=" color: green;">Verificado</p>
+              <span>$<%= teacher.data_teacher.usd_per_hour %>  Clases de 60 minutos</span>
+              <p><%= teacher.about_me %></p>
+              <p><%= teacher.data_teacher.teacher_description %></p>
+              <div class="language">
+                <p>Nativo: <%= teacher.native_language %></p>
+                <p>Enseña: <%= teacher.data_teacher.teaching_languages %></p>
+              </div>
+            </div>
           </div>
-        </div>
+        <% end %>
       </div>
-    </div>
-
-        <div class="col-md-3">
-      <div class="card-community-home-2">
-        <div class="title">
-          <h2 class="name">Carolina</h2>
-          <p class="learns">Frances</p>       
-        </div>
-        <div class="img">
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg" alt="Carolina Image" />
-        </div>
-        <div class="infos">
-          <p>Verificado</p>
-          <p>Tener experiencia viviendo en el extranjero.</p>
-          <p>Certificado TEFL/TESOL</p>
-          <p>Experto en inglés conversacional, preparación TOEFL, preparación de inglés FCEL</p>
-          <p>$ 5.178 Clases de 60 minutos</p>
-          <p>Profesora de ESL certificada por TESOL con 2 años y medio de experiencia en la enseñanza. ¿Quieres convertirte en un comunicador en inglés seguro y eficaz? Entonces estás en el lugar correcto...</p>
-          <p>38 Reseñas</p>
-          <p>1800 clases impartidas</p>
-          <p>19 Estudiantes activos</p>
-          <div class="language">
-            <p>Nativo</p>
-            <p>Experto</p>
-            <p>Intermedio</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-        <div class="col-md-3">
-      <div class="card-community-home-2">
-        <div class="title">
-          <h2 class="name">Carolina</h2>
-          <p class="learns">Frances</p>       
-        </div>
-        <div class="img">
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg" alt="Carolina Image" />
-        </div>
-        <div class="infos">
-          <p>Verificado</p>
-          <p>Tener experiencia viviendo en el extranjero.</p>
-          <p>Certificado TEFL/TESOL</p>
-          <p>Experto en inglés conversacional, preparación TOEFL, preparación de inglés FCEL</p>
-          <p>$ 5.178 Clases de 60 minutos</p>
-          <p>Profesora de ESL certificada por TESOL con 2 años y medio de experiencia en la enseñanza. ¿Quieres convertirte en un comunicador en inglés seguro y eficaz? Entonces estás en el lugar correcto...</p>
-          <p>38 Reseñas</p>
-          <p>1800 clases impartidas</p>
-          <p>19 Estudiantes activos</p>
-          <div class="language">
-            <p>Nativo</p>
-            <p>Experto</p>
-            <p>Intermedio</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-        <div class="col-md-3">
-      <div class="card-community-home-2">
-        <div class="title">
-          <h2 class="name">Carolina</h2>
-          <p class="learns">Frances</p>       
-        </div>
-        <div class="img">
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg" alt="Carolina Image" />
-        </div>
-        <div class="infos">
-          <p>Verificado</p>
-          <p>Tener experiencia viviendo en el extranjero.</p>
-          <p>Certificado TEFL/TESOL</p>
-          <p>Experto en inglés conversacional, preparación TOEFL, preparación de inglés FCEL</p>
-          <p>$ 5.178 Clases de 60 minutos</p>
-          <p>Profesora de ESL certificada por TESOL con 2 años y medio de experiencia en la enseñanza. ¿Quieres convertirte en un comunicador en inglés seguro y eficaz? Entonces estás en el lugar correcto...</p>
-          <p>38 Reseñas</p>
-          <p>1800 clases impartidas</p>
-          <p>19 Estudiantes activos</p>
-          <div class="language">
-            <p>Nativo</p>
-            <p>Experto</p>
-            <p>Intermedio</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-            <div class="col-md-3">
-      <div class="card-community-home-2">
-        <div class="title">
-          <h2 class="name">Carolina</h2>
-          <p class="learns">Frances</p>       
-        </div>
-        <div class="img">
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg" alt="Carolina Image" />
-        </div>
-        <div class="infos">
-          <p>Verificado</p>
-          <p>Tener experiencia viviendo en el extranjero.</p>
-          <p>Certificado TEFL/TESOL</p>
-          <p>Experto en inglés conversacional, preparación TOEFL, preparación de inglés FCEL</p>
-          <p>$ 5.178 Clases de 60 minutos</p>
-          <p>Profesora de ESL certificada por TESOL con 2 años y medio de experiencia en la enseñanza. ¿Quieres convertirte en un comunicador en inglés seguro y eficaz? Entonces estás en el lugar correcto...</p>
-          <p>38 Reseñas</p>
-          <p>1800 clases impartidas</p>
-          <p>19 Estudiantes activos</p>
-          <div class="language">
-            <p>Nativo</p>
-            <p>Experto</p>
-            <p>Intermedio</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-            <div class="col-md-3">
-      <div class="card-community-home-2">
-        <div class="title">
-          <h2 class="name">Carolina</h2>
-          <p class="learns">Frances</p>       
-        </div>
-        <div class="img">
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg" alt="Carolina Image" />
-        </div>
-        <div class="infos">
-          <p>Verificado</p>
-          <p>Tener experiencia viviendo en el extranjero.</p>
-          <p>Certificado TEFL/TESOL</p>
-          <p>Experto en inglés conversacional, preparación TOEFL, preparación de inglés FCEL</p>
-          <p>$ 5.178 Clases de 60 minutos</p>
-          <p>Profesora de ESL certificada por TESOL con 2 años y medio de experiencia en la enseñanza. ¿Quieres convertirte en un comunicador en inglés seguro y eficaz? Entonces estás en el lugar correcto...</p>
-          <p>38 Reseñas</p>
-          <p>1800 clases impartidas</p>
-          <p>19 Estudiantes activos</p>
-          <div class="language">
-            <p>Nativo</p>
-            <p>Experto</p>
-            <p>Intermedio</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-            <div class="col-md-3">
-      <div class="card-community-home-2">
-        <div class="title">
-          <h2 class="name">Carolina</h2>
-          <p class="learns">Frances</p>       
-        </div>
-        <div class="img">
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg" alt="Carolina Image" />
-        </div>
-        <div class="infos">
-          <p>Verificado</p>
-          <p>Tener experiencia viviendo en el extranjero.</p>
-          <p>Certificado TEFL/TESOL</p>
-          <p>Experto en inglés conversacional, preparación TOEFL, preparación de inglés FCEL</p>
-          <p>$ 5.178 Clases de 60 minutos</p>
-          <p>Profesora de ESL certificada por TESOL con 2 años y medio de experiencia en la enseñanza. ¿Quieres convertirte en un comunicador en inglés seguro y eficaz? Entonces estás en el lugar correcto...</p>
-          <p>38 Reseñas</p>
-          <p>1800 clases impartidas</p>
-          <p>19 Estudiantes activos</p>
-          <div class="language">
-            <p>Nativo</p>
-            <p>Experto</p>
-            <p>Intermedio</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-            <div class="col-md-3">
-      <div class="card-community-home-2">
-        <div class="title">
-          <h2 class="name">Carolina</h2>
-          <p class="learns">Frances</p>       
-        </div>
-        <div class="img">
-          <img src="https://us.123rf.com/450wm/kho/kho1309/kho130900148/21923811-feliz-hermosa-mujer-joven-con-la-bicicleta-retro-verano-al-aire-libre.jpg" alt="Carolina Image" />
-        </div>
-        <div class="infos">
-          <p>Verificado</p>
-          <p>Tener experiencia viviendo en el extranjero.</p>
-          <p>Certificado TEFL/TESOL</p>
-          <p>Experto en inglés conversacional, preparación TOEFL, preparación de inglés FCEL</p>
-          <p>$ 5.178 Clases de 60 minutos</p>
-          <p>Profesora de ESL certificada por TESOL con 2 años y medio de experiencia en la enseñanza. ¿Quieres convertirte en un comunicador en inglés seguro y eficaz? Entonces estás en el lugar correcto...</p>
-          <p>38 Reseñas</p>
-          <p>1800 clases impartidas</p>
-          <p>19 Estudiantes activos</p>
-          <div class="language">
-            <p>Nativo</p>
-            <p>Experto</p>
-            <p>Intermedio</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-
+    <% end %>
 
   </div>
 </div>
+
+
