corrección de rutas teaching_language_sessions

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,9 @@
 <section class="container">
   <header>
     <h1>Perfil del usario cliqueado</h1>
+    <%= @user.id %>
   </header>
-  <%= raise %>
+  <%#= raise %>
 
   <div>
     <p>Find me in app/views/users/show.html.erb</p>
